syntax = "proto3";

package com.github.gustavomonarin.gdpr;

option java_outer_classname = "EncryptedPersonalDataV1";

message EncryptedPersonalData {
  string subject_id = 1;
  string kms_id = 2;
  bytes data = 3;

  //(protobuf) metadata
  int32 personal_data_field_number = 10;

  //encryption metadata

  //  Used transformation following the structure: {algo}/{mode}/{padding}
  //  For more details: https://docs.oracle.com/javase/7/docs/technotes/guides/security/StandardNames.html#Cipher>possible values
  string usedTransformation = 20;

  // Used initialization vector
  bytes initializationVector = 21;

}